# Class-Widgets

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  basic_dirs.py  conf.py  cses_mgr.py  data_model.py  extra_menu.py  file.py  generate_speech.py  i18n_manager.py  list_.py  main.py  menu.py  network_thread.py  play_audio.py  plugin.py  plugin_plaza.py  pyproject.toml  requirements.txt  resources.qrc  splash.py  tip_toast.py  ui_loader.py  utils.py  weather.py  weather_db.py  要求.txt
.github/ISSUE_TEMPLATE/: BugReport.yml  I18nReport.yml
.github/workflows/: 1.yml  README_build_unified.md  build.yml  build_1.yml  build_macos.yml  build_pyinstaller.yml  cache_clear.yml  code_check.yml  i18n.yml  nightly.yml  release.yml
Scripts/: ui_converter.py
config/: default_config.json
config/data/: weather_api.json
data/: weather_api.json
installer/: ClassWidgets.wxs
ui/default/: widget-current-activity.ui  widget-weather.ui
ui/default/dark/: widget-current-activity.ui
ui/default/dark/i18n/: zh_CN.ts
ui/default/dark/py/: toast-open_dialog.py  widget-base.py  widget-countdown-day.py  widget-countdown.py  widget-current-activity.py  widget-floating.py  widget-next-activity.py  widget-time.py  widget-weather.py
ui/default/i18n/: zh_CN.ts
ui/default/py/: toast-open_dialog.py  widget-base.py  widget-countdown-day.py  widget-countdown.py  widget-current-activity.py  widget-floating.py  widget-next-activity.py  widget-time.py
ui/hoshino/: widget-current-activity.ui
ui/hoshino/dark/: widget-countdown-day.ui  widget-countdown.ui  widget-current-activity.ui  widget-next-activity.ui  widget-time.ui
ui/hoshino/dark/py/: widget-base.py  widget-countdown-day.py  widget-countdown.py  widget-current-activity.py  widget-next-activity.py  widget-time.py
ui/hoshino/i18n/: zh_CN.ts
ui/hoshino/py/: widget-base.py  widget-countdown-day.py  widget-countdown.py  widget-current-activity.py  widget-next-activity.py  widget-time.py
ui/minimize/: widget-current-activity.ui  widget-weather.ui
ui/minimize/dark/: widget-current-activity.ui
ui/minimize/dark/i18n/: zh_CN.ts
ui/minimize/dark/py/: widget-base.py  widget-countdown-day.py  widget-countdown.py  widget-current-activity.py  widget-next-activity.py  widget-time.py
ui/minimize/i18n/: zh_CN.ts
ui/minimize/py/: widget-base.py  widget-countdown-day.py  widget-countdown.py  widget-current-activity.py  widget-next-activity.py  widget-time.py  widget-weather.py
ui/shiroko/: widget-current-activity.ui  widget-weather.ui
ui/shiroko/dark/: widget-countdown-day.ui  widget-countdown.ui  widget-current-activity.ui  widget-next-activity.ui  widget-time.ui
ui/shiroko/dark/i18n/: zh_CN.ts
ui/shiroko/dark/py/: widget-base.py  widget-countdown-day.py  widget-countdown.py  widget-current-activity.py  widget-next-activity.py  widget-time.py  widget-weather.py
ui/shiroko/py/: widget-base.py  widget-countdown-day.py  widget-countdown.py  widget-current-activity.py  widget-next-activity.py  widget-time.py
view/: splash.ui  widget-toast-bar.ui
view/i18n/: ja_JP.qm  ja_JP.ts  zh_CN.ts
view/menu/: about.ui  advance.ui  custom.ui  plugin_mgr.ui  sound.ui  timeline_edit.ui  tts_settings.ui  weather.ui  weather_alert_card.ui  weather_alert_msgbox.ui
view/py/: extra_menu.py  splash.py  widget-toast-bar.py
view/py/menu/: about.py  advance.py  configs.py  countdown_custom_edit.py  custom.py  file_item.py  help.py  plugin_mgr.py  preview.py  schedule_db_edit.py  schedule_edit.py  sound.py  subject.py  timeline_edit.py  tts_settings.py  weather.py  weather_alert_card.py  weather_alert_msgbox.py
view/py/pp/: home.py  latests.py  plugin_detail.py  search.py  settings.py
